--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -9,12 +9,12 @@
 \addbibresource{citations.bib}
 
 \title{Master Thesis}
-\subtitle{A contribution to the world’s collected knowledge on this topic}
+\subtitle{Structural Code Editing With Assistive Technologies}
 \author{Gaute Berge}
 
 \begin{document}
 \duoforside[dept={Department of Informatics},
-program={Informatics: Language and Communication},
+program={Informatics: Programming and System Architecture},
 long]
 
 \frontmatter{}
@@ -31,7 +31,57 @@ long]
 
 Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
 
+\chapter{Motivation}
+\begin{itemize}
+    \item{Injuries}
+    \item{Try to find statistics}
+\end{itemize}
+
 \chapter{Background}
+
+\section{Assistive Technologies}
+
+\begin{itemize}
+    \item{What are assistive technologies?}
+    \item{Who uses them?}
+\end{itemize}
+
+\subsection{Eye Trackers}
+\begin{itemize}
+    \item{tobii}
+    \item{issues (instability, neck strain)}
+\end{itemize}
+
+\subsection{Screen Readers}
+Another major part of this project, but should probably be considered.
+
+\subsection{Speech Recognition}
+\begin{itemize}
+    \item{Signal processing}
+    \item{Natural language processing}
+\end{itemize}
+
+
+
+\section{Programming By Voice}
+\begin{itemize}
+    \item{How is this achieved?}
+    \item{How does programming differ from normal dictation?}
+    \item{NLP vs command based}
+    \item{Different solutions}
+    \item{Programming with talon.}
+\end{itemize}
+
+
+
+\section{Code Editors}
+\begin{itemize}
+    \item{Difference between text editor and code editor}
+    \item{Plain and rich text formats}
+    \item{IDEs}
+    \item{Modal Editors}
+\end{itemize}
+
 
 \part{The project}
 
