--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -12,3 +12,26 @@
  address = {New York, NY, USA},
  keywords = {standards},
 }
+
+% @article{Deuce,
+%  author = {Brian Hempel, Justin Lubin, Grace Lu, and Ravi Chugh},
+%  journal = {to do},
+%  % chapter = {Computer Programming As an Art},
+%  title = {Deuce: A Lightweight User Interface for Structured Editing},
+%  year = {2018},
+%  % isbn = {978-1-4503-1049-9},
+%  % articleno = {1974},
+%  % url = {http://doi.acm.org/10.1145/1283920.1283929},
+%  % doi = {10.1145/1283920.1283929},
+%  % acmid = {1283929},
+%  % publisher = {ACM},
+%  % address = {New York, NY, USA},
+%  % keywords = {standards},
+% }
+
+@article{deuce,
+   author={Brian Hempel, Justin Lubin and Grace Lu and Ravi Chugh},
+   title={Deuce: A Lightweight User Interface for Structured Editing},
+   journal={ICSE ’18: 40th International Conference on Software Engineering},
+   year=2018,
+}
