--- a/essay/src/thesis.tex
+++ b/essay/src/thesis.tex
@@ -301,7 +301,7 @@ Despite having some clear advantages over traditional textbased editors, structu
 One reason for this is that the editors that are popular today have many years of engineering behind them.
 There are no structural editors that come close in the amount of features or polish to that of IntelliJ, VSCode or Vim.
 Structural editor still have unresolved issues in their design that needs to be addressed before they will see commercial use.
-Deuce is a structure-aware editor developed as part of a research project at the University of Chicago ~\parencite{deuce}.
+Deuce is a structure-aware editor developed as part of a research project at the University of Chicago~\parencite{deuce}.
 It suggests a hybrid approach that addresses some of the problems with current textbased work-flows.
 I will be using this as a reference for what the modern structural editor might look like.
 
@@ -343,7 +343,8 @@ Additionally when evaluating I will have to validate that all actions required t
 
 % \chapter{Results}
 
+
 \backmatter{}
-\printbibliography
+\printbibliography{}
 
 \end{document}
