--- a/thesis/src/citations.bib
+++ b/thesis/src/citations.bib
@@ -35,3 +35,12 @@
    journal={ICSE ’18: 40th International Conference on Software Engineering},
    year=2018,
 }
+
+@inproceedings{gould2001implementation,
+  title={Implementation and Acceptance of NatLink, a Python-Based Macro System for Dragon NaturallySpeaking},
+  author={Gould, Joel},
+  booktitle={The Ninth International Python Conference},
+  pages={5--8},
+  year={2001}
+}
+
