--- a/thesis/src/thesis.tex
+++ b/thesis/src/thesis.tex
@@ -21,51 +21,102 @@ program={Informatics: Programming and System Architecture},
 long]
 
 \frontmatter{}
-% \chapter*{Abstract}
+\chapter*{Abstract}
 
 \tableofcontents{}
-% \listoffigures{}
-% \listoftables{}
+\listoffigures{}
+\listoftables{}
 
 % \chapter*{Preface}
 
 \mainmatter{}
 \chapter{Background and Motivation}
+
+In this section I will cover the history of voice coding (Dragon, NatLink, Dragonfly, Caster etc\ldots)
+as well as the state of the art language tooling. (LSP and TreeSitter).
+I will also cover something about the Elm programming language, as I will be using that in my analysis.
 % Donald Knuth often says smart stuff ~\parencite{Knuth:2007:CPA:1283920.1283929}.
+
+
 
 \section{Introduction}
 
+\section{Injuries}
+Here I will cover research related to injuries such as RSI in the tech industry.
+
+\section{Dragon NaturallySpeaking}
+The worlds first large-vocabulary general purpose dictation system.
+Dragon is in many ways the foundation for many of tools like Talon.
+Some voice systems use it as just a speach engine, but it also provides other functionality like mouse control.
+Available for mac and windows, but discontinued for mac.% when??
+The mac version is still available on eBay, and still works. % maybe something here about the download stuff.
+
+\section{NatLink}
+While dragon alone is a very powerful dictation system, it's customization ability is limited.
+Dragon does provide a simple scripting language in the pro edition, but it has very limited capabilities compared to
+moden general purpose scripting languages.
+In 1999, NatLink was developed to solve this problem. It is a macro system for dragon which lets the user write macros that can be triggered by voice commands
+in python.~\parencite{gould2001implementation}
+Later on, more high level apis were built on top os natlink such as dragonfly and caster. % Not really precise. Need to look into history here.
+
+\section{Command First vs Data First}
+Two different dication strategies.
+Command first = Output only triggered when a command is triggered by speaking a particular phrase.
+Data first = The user can speak without keywords. The system should infer capitalization and punctuation.
+Here i will describe the tradeoff between these two.
+
+\section{VoiceCode}
+Seems like this was a popular dictaion system at some point. There are papers on it, so might be worth dicussing.
+
+
 \section{TalonVoice}
+Here I cover everything I can about how to use Talon and how the project is organized.
+I wrote some in the essay, but this should be updated for the new API.
+
 \subsection{Current state of the project}
 \subsection{Distribution and Monetization}
 \subsection{Community}
 \subsection{Learning Resources and Documentation}
+
 \section{Writing Voice Commands with Talon}
 \subsection{Rules}
-
 \subsection{Actions}
-
 \subsection{Contexts}
+\subsection{Dynamic Lists}
 
+\section{Using Talon}
+In this section I will cover my workflow with Talon. This is relevant because the reader needs to see the advantages and disadvantages of using talon compared to using a keboard.
+\subsection{Text Editing}
+Here I will cover how I use Talon can be integrated with Vim and IntelliJ, and also cover how to edit text without editor integration.
+\subsection{Web Browsing}
+Vimium and Surfingkeys. How are these plugins used.
+\subsection{Using The Terminal}
 
-% \section{Using Talon}
-% \subsection{Text Editing}
-% \subsection{Web Browsing}
-% \subsection{Using The Terminal}
+\section{PL Theory}
+As much of the work is related to analysing programs, I should cover some general stuff abuut languages.
+Not sure how much detail is appropriate here, but could be a source for a lot of content.
+Possible subjects: Parsing, type checking/inference, scopes, etc.
 
+\section{Language Server Protcol}
+Client-server based approach to reuable language IDE features.
+I'll compare this to the traditional IDE approach (Eclipse / Intellij)
+and discuss how this can be used by other tools than editors.
+
+\section{TreeSitter}
+TreeSitter is a system for incremental parsing developed by GitHub.
+It was conceved as a solution to the problem of instant semantic syntax highlighting,
+but is also used in the implementation of some language servers.
+
+\section{Elm}
+In this thisis I will be using Elm as the subject of the alysis.
+Elm is a feature rich, but relatively simple language.
+Some knowledge of Elm is useful for the reader, no experience is required.
+Primaraly I will cover the features of Elm that introduces new identefiers into the scope,
+as these will be relevant when generating voice commands later.
 
 \chapter{The project}
 
 \section{Methodology And Evaluation}
-
-% \part{The project}
-
-% \chapter{Planning the project}
-
-% \part{Conclusion}
-
-% \chapter{Results}
-
 
 \backmatter{}
 \printbibliography{}
